# pic32mx470-rs-hello-world

./: 32MX470F512H_procdefs.ld  Cargo.toml  NOTICE  README.md  build.rs  build.sh  link.x  mipsel-none.json
mips-rt/: Cargo.toml  NOTICE
mips-rt/native_lib/: Makefile  crt0.S  exception_table.S  excpetion_table.S  gen_isr_table.py  general-exception.S  isr_context.S  mips_irq.S
mips-rt/src/: lib.rs
native_lib/: Makefile  config_mx470.c  crt0.S  default_handlers.c
src/: main.rs  uart.rs
